--- a/project.config
+++ b/project.config
@@ -1,5 +1,6 @@
 [project]
 	description = Mirror of git://git.xfce.org/apps/xfce4-mixergit://git.xfce.org/apps/xfce4-mixer
+	state = read only
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
